@@ -1,6 +1,8 @@
 Change log for Mail::AuthenticationResults
 
 {{$NEXT}}
+        - Added as_json method to return structured JSON
+          version of an instance.
 
 1.20180923 2018-09-23 13:39:01+10:00 Australia/Melbourne
         - Added a 'has' search property to allow searching
